dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)

dnl Init basic data for package
dnl define following variables :
dnl  - PACKAGE_NAME, the name ;
dnl  - PACKAGE_TARNAME, the name used for the tarball ;
dnl  - PACKAGE_VERSION, the version ;
dnl  - PACKAGE_STRING, the name + the version ;
dnl  - PACKAGE_BUGREPORT, the mail.
AC_INIT([BigDFT - cluster], [0.1], [caliste@pcpm.ucl.ac.be], [cluster])

dnl All temporary building files are put in this directory.
dnl his must be called before AM_INIT_AUTOMAKE
AC_CONFIG_AUX_DIR(config)

dnl Init something, don't know exactly what...
AM_INIT_AUTOMAKE

dnl If F77 environement variable is not already set, it
dnl looks for a Fortran77 compiler and set F77 variable.
dnl AC_PROG_F77()

dnl If FC environement variable is not already set, it
dnl looks for a modern Fortran compiler, prefering newest
dnl fortran available (e. g. Fortran95). Then FC variable
dnl is set.
AC_PROG_FC()

dnl Set the FCFLAGS and FFLAGS variable
if test -n "$FFLAGS"; then
  AC_SUBST(FFLAGS, "-O2")
fi
if test -n "$FCFLAGS"; then
  AC_SUBST(FCFLAGS, "-O2")
fi

dnl Enable or not MPI.
AC_MSG_CHECKING([for builtin MPI capabilities])
ac_use_mpi="yes"
AC_ARG_ENABLE(mpi, AS_HELP_STRING([--disable-mpi], [Don't use MPI (enable by default).]),
              ac_use_mpi=$enableval, ac_use_mpi="yes")
if test "$ac_use_mpi" = "yes"; then
  AC_DEFINE(USE_MPI)
  AC_SUBST(PARALLEL_OPTION, ".true.")
else
  AC_SUBST(PARALLEL_OPTION, ".false.")
fi
AC_SUBST(MPI_LDFLAGS)
AC_SUBST(MPI_INCLUDE)
AM_CONDITIONAL(USE_MPI, test "$ac_use_mpi" = "yes")
AC_MSG_RESULT([$ac_use_mpi])

dnl Use the simple or the optimised convolution code.
AC_MSG_CHECKING([for convolution optimisation])
ac_use_opti_convolut="yes"
AC_ARG_ENABLE(optimised-convolution, AS_HELP_STRING([--disable-optimised-convolution], [Use the simple convolution code (use the optimised code by default).]),
                         ac_use_opti_convolut=$enableval, ac_use_opti_convolut="yes")
AM_CONDITIONAL(USE_OPTI_CONVOLUT, test "$ac_use_opti_convolut" = "yes")
AC_MSG_RESULT([$ac_use_opti_convolut])

dnl Get the lapack library
AC_ARG_WITH(lapack, AS_HELP_STRING([--with-lapack], [Give the filename of the Lapack library (default = /usr/lib/liblapack.a).]),
            ac_lapack_dir=$withval, ac_lapack_dir="/usr/lib/liblapack.a")
AC_SUBST(LAPACK_LIB, $ac_lapack_dir)

dnl Get the Blas library
AC_ARG_WITH(blas, AS_HELP_STRING([--with-blas], [Give the filename of Blas library (default = /usr/lib/libblas.a).]),
            ac_blas_dir=$withval, ac_blas_dir="/usr/lib/libblas.a")
AC_SUBST(BLAS_LIB, $ac_blas_dir)

dnl Give the name of file.in to transform to file
AC_CONFIG_FILES([
Makefile
src/Makefile
src/parameters.h])
AC_OUTPUT
